fixed openapi issue and frontend tests
